# GeometricTools

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  doxygen_configuration
Example/: CMakeLists.txt  main.cpp
Examples/: CMakeLists.txt  main.cpp
Examples/LinearSystems/: CMakeLists.txt  main.cpp
Examples/PlaneCurves/: CMakeLists.txt  main.cpp
gtest/: CMakeLists.txt
include/Distances/: LinearToLinear.h  LinearToPolyline.h  PointToLinear.h  PolylineToPolyline.h
include/Distances/2D/: LinearToLinear.h  LinearToPolyline.h  PointToLinear.h  PointToPolyline.h  PolygonToPolygon.h
include/Intersections/: IntersectionInfo.h
include/Intersections/2D/: LinearToLinear.h  LinearToPolygon.h  RectangleToRectangle.h
include/Math/: CStrassen.h  Matrix.h  Vector.h
include/Math/LinearSystems/: LUDecomposition.h  QRDecomposition.h  SVDDecomposition.h  SolveGauss.h  SolveLU.h  SolveLinear.h
include/Math/Numerical Optimization/1D/: GoldenSearchMinimization.h
include/Math/Transformations/2D/: Homogeneous.h
include/Math/Transformations/3D/: Homogeneous.h
include/Misc/: Helper.h
include/Primitives/: Curve.h  LinearShapes.h  PiecewiseCurve.h  Polyline.h  PolynomialCurve.h
include/Primitives/1D/: CardinalCurve.h  CardinalPiecewiseCurve.h  Curve.h  HermiteCurve.h  HermitePiecewiseCurve.h  NaturalPiecewiseCurve.h  PiecewiseCurve.h  PolynomialCurve.h
include/Primitives/2D/: Circle.h  PlaneCurve.h  Polygon.h  Polyline.h  QuadraticCurve.h  Rectangle.h  SpaceCurve.h  Triangle.h
include/Primitives/Tools/: BoundingBox.h  CurveSubdivision.h
include/SpacePartitioning/2D/: QuadTree.h
include/geometric_tools/Distances/: LinearToLinear.h  LinearToPolyline.h  PointToLinear.h  PolylineToPolyline.h
include/geometric_tools/Distances/2D/: PointToPolyline.h  PolygonToPolygon.h
include/geometric_tools/Intersections/: IntersectionInfo.h
include/geometric_tools/Intersections/2D/: LinearToLinear.h  LinearToPolygon.h  RectangleToRectangle.h
include/geometric_tools/Math/: Matrix.h  Vector.h
include/geometric_tools/Math/LinearSystems/: LUDecomposition.h  SolveLU.h  (+3 more)
include/geometric_tools/Primitives/: LinearShapes.h  Polyline.h
includes/: CStrassen.h  Helper.h  Matrix.h  MatrixAlgorithms.h  Vector.h
test/: Tests.cpp
(+18 files in other folders)
